<!--
  ~ Copyright (C) 2017-2023 Institute of Communication and Computer Systems (imu.iccs.gr)
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public License, v2.0, unless
  ~ Esper library is used, in which case it is subject to the terms of General Public License v2.0.
  ~ If a copy of the MPL was not distributed with this file, you can obtain one at
  ~ https://www.mozilla.org/en-US/MPL/2.0/
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath></relativePath>
    </parent>

    <name>Event Management System</name>

    <groupId>eu.melodic.event</groupId>
    <artifactId>ems-core</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>7.0.0-SNAPSHOT</revision>

        <!-- Source encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java version -->
        <java.version>17</java.version>
        <maven.compiler.release>17</maven.compiler.release>

        <!-- Melodic component versions -->
        <melodic.version>${revision}</melodic.version>

        <!--XXX:SPLIT:  TO BE REMOVED -->
        <camel.version>6.0.0-SNAPSHOT</camel.version>
        <cdo-client.version>6.0.0-SNAPSHOT</cdo-client.version>
        <!--XXX:SPLIT: <authorization.version>4.5.0-SNAPSHOT</authorization.version>-->

        <!-- Versions for common plugins -->
        <source-plugin.version>2.4</source-plugin.version>
        <maven-compiler.version>3.11.0</maven-compiler.version>
        <javadoc-plugin.version>2.9.1</javadoc-plugin.version>
        <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>

        <!-- Gson version -->
        <gson.version>2.8.9</gson.version>
        <!-- Apache Commons Lang3 version -->
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <!-- Apache Commons Collection4 version -->
        <!--<commons-collections4.version>4.4</commons-collections4.version>-->
        <!-- Esper version -->
        <esper.version>7.1.0</esper.version>
        <!-- MathParser version -->
        <mathparser.version>4.2.0</mathparser.version>
        <!-- Lombok version -->
        <lombok.version>1.18.24</lombok.version>
        <!-- ActiveMQ (classic) version -->
        <activemq.version>5.17.3</activemq.version>
        <!-- Jasypt version -->
        <jasypt.starter.version>3.0.5</jasypt.starter.version>

        <!-- Jackson and Snakeyaml - Used in baguette-client-install -->
        <jackson.version>2.15.0</jackson.version>
        <snakeyaml.version>1.33</snakeyaml.version>
    </properties>

    <modules>
        <module>web-admin</module>
        <module>util</module>
        <module>broker-client</module>
        <module>broker-cep</module>
        <module>translator</module>
        <module>common</module>
        <module>baguette-client</module>
        <module>baguette-server</module>
        <module>baguette-client-install</module>
        <module>control-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!--<dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>public_resources</directory>
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <!--<followSymlinks>false</followSymlinks>-->
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                    <!--<execution>
                        <id>flatten-clean-2</id>
                        <phase>install</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>-->
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${source-plugin.version}</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler.version}</version>
                    <configuration>
                        <compilerArgs>
                            <!--<arg>-Xlint:unchecked,-Xlint:deprecation</arg>-->
                            <arg>-parameters</arg>  <!-- Used to suppress warning "Using deprecated '-debug' fallback for parameter name resolution. Compile the affected code with '-parameters' instead or avoid its introspection"-->
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>aggregate</id>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                            <phase>package</phase>
                            <configuration>
                                <additionalparam>-Xdoclint:none</additionalparam>
                            </configuration>
                        </execution>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <additionalparam>-Xdoclint:none</additionalparam>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>

                <!--plugins for getting scmBranch value lowercase to use in docker images -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.4</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>create</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.groovy.maven</groupId>
                    <artifactId>gmaven-plugin</artifactId>
                    <version>1.0</version>
                    <executions>
                        <execution>
                            <phase>initialize</phase>
                            <goals>
                                <goal>execute</goal>
                            </goals>
                            <configuration>
                                <source>
                                    import org.apache.commons.lang.StringUtils

                                    project.properties["scmBranch"] = StringUtils.lowerCase(project.properties["scmBranch"])
                                </source>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.1</version>
                    <executions>
                        <execution>
                            <id>default-deploy</id>
                            <phase>deploy</phase>
                            <goals>
                                <goal>deploy</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <scm>
        <connection>scm:git:https://bitbucket.7bulls.eu/scm/mel/upperware.git</connection>
        <developerConnection>scm:git:https://bitbucket.7bulls.eu/scm/mel/upperware.git</developerConnection>
    </scm>

</project>
